--- a/index.Rmd
+++ b/index.Rmd
@@ -32,5 +32,11 @@ output:
 # This will include Chapter 3 (that is updated in its own file) in the document.
 ```
 
+***
+
+```{r child = "chapter4.Rmd"}
+# This will include Chapter 3 (that is updated in its own file) in the document.
+```
+
 (more chapters to be added similarly as we proceed with the course!)
 
