add the chapter4 and 5.

--- a/index.Rmd
+++ b/index.Rmd
@@ -13,6 +13,9 @@ output:
 ---
 
 ***
+```{r}
+options(knitr.duplicate.label = "allow")
+```
 
 # Introduction to Open Data Science - Course Project
 
@@ -37,6 +40,15 @@ output:
 # This will include Chapter 4 (that is updated in its own file) in the document.
 ```
 
+***
+```{r child= "chapter5.Rmd"}
+# This will include Chapter 5 (that is updated in its own file) in the document.
+```
 
-(more chapters to be added similarly as we proceed with the course!)
+***
+```{r}
+
+```
+
+(more chapters to be added!)
 
