--- a/chapter6.Rmd
+++ b/chapter6.Rmd
@@ -14,3 +14,288 @@ options(knitr.duplicate.label = "allow")
 date()
 ```
 
+## 1 Load the longitudinal bprsl and ratsl datasets
+```{r message=FALSE, warning=FALSE}
+library(dplyr)
+library(tidyr)
+library(ggplot2)
+
+# Set the working directory
+setwd("Z:/Course/Opendata science/IODS-project")
+
+# read the longitudinal and original datasets
+rats <- read.table("https://raw.githubusercontent.com/KimmoVehkalahti/MABS/master/Examples/data/rats.txt", sep="", header=TRUE)
+bprs <- read.csv("https://raw.githubusercontent.com/KimmoVehkalahti/MABS/master/Examples/data/BPRS.txt", sep="", header=TRUE)
+
+bprsl <- read.csv('data/bprsl.csv', sep = ",", header = TRUE, stringsAsFactors = TRUE) 
+ratsl <- read.csv('data/ratsl.csv', sep = ",", header = TRUE, stringsAsFactors = TRUE)
+
+bprsl <- bprsl[,-1]
+ratsl <- ratsl[,-1]
+
+# Dimension of two form of data
+dim(rats) #16*13
+dim(ratsl) #176*5
+dim(bprs) #40*11
+dim(bprsl) #360*5
+
+```
+
+## 2.1 Summary Measure Analysis for ratsl data, the Chapter8 analysis
+## Graphical Displays and Summary Measure Approach
+Interpretations:
+-1 in ratsl data, the weight ~ Time + Group + ID
+
+-2 Base on graphs, we could see :(1) wight increased with time in all groups
+
+(2)the weight trends clearly separated in three groups:in which group1 had quite low values, and group 2 and 3 shard similar wight regions, from 400-550.
+
+(3) Additionally, one ID in Group2 exceptional high weight, ranged from 550 to 640.
+
+```{r message=FALSE, warning=FALSE}
+names(ratsl)
+str(ratsl)
+
+# Convert Group and ID as factor varibles
+ratsl$ID <- as.factor(ratsl$ID)
+ratsl$Group <- as.factor(ratsl$Group)
+ratsl$Time <- as.factor(ratsl$Time)
+str(ratsl)
+
+# Draw the plot of ratsl
+# Plot1
+ggplot(ratsl, aes(x = Time, y = weight, color = ID)) +
+  geom_point(size=0.5) +
+  geom_line(aes(group = ID)) +
+  facet_grid(. ~ Group, labeller = label_both) +
+  theme(legend.position = "none") + 
+  scale_y_continuous(limits = c(min(ratsl$weight), max(ratsl$weight)))
+
+
+```
+
+## 2.2 Summary Measure Analysis- Line plots
+### the standarized plots and mean+sd plots
+Interpretations:
+-1 plot standardized weight, the differences between groups of weight trends with time were more apparent.
+
+-2 In group1 and 3, there was one ID showed a significant low standardized weight trend line, while in group2, one curve/line posed in high value regions.
+
+-3 here, i could more clearly found that the weight development with time varied in three groups, in which upward and downward trend both presented.
+
+-4 the plot2 clearly shown the values gaps among three groups and illustrated their temporal trends, in which group 2 and 3 visible increased while group relatively stable.
+
+```{r message=FALSE, warning=FALSE}
+# Based on previous plots, I firstly group ratsl by Time
+# Standardise the variable weight by Time
+ratsl.gb <- ratsl %>%
+  group_by(Group, Time) %>%
+  mutate(stdweight = (weight - mean(weight))/sd(weight)) %>%
+  ungroup()
+dim(ratsl) #176*5
+dim(ratsl.gb) #176*6
+names(ratsl)
+
+# Plot again with the standardised weight
+ggplot(ratsl.gb, aes(x = Time, y = stdweight, linetype = ID)) +
+  scale_linetype_manual(values = rep(1:10, times=4)) +
+  geom_line(aes(group = ID)) +
+  facet_grid(. ~ Group, labeller = label_both) +
+  scale_y_continuous(name = "standardized weight") +
+  theme_bw()
+
+# Number/levels of Times
+n <- ratsl$Time %>% unique() %>% length()
+
+# Summary rats with mean and standard error of weight by Group and Time 
+ratss.gb <- ratsl %>%
+  group_by(Group, Time) %>%
+  summarise(mean = mean(weight), se = sd(weight)/sqrt(n)) %>%
+  ungroup()
+ratss.gb %>% summary()
+dim(ratss.gb) #33*4
+
+# Glimpse the grouped ratss data
+glimpse(ratss.gb)
+
+# Plot the mean profiles
+names(ratss.gb) #"Group" "Time"  "mean"  "se"
+
+ggplot(ratss.gb, aes(x = Time, y = mean, color = Group)) +
+  geom_point(size=0.8) +
+  geom_line(aes(group = Group)) +
+  geom_errorbar(aes(ymin = mean - se, ymax = mean + se), width=0.3) +
+  scale_y_continuous(name = "mean(weight) +/- se(weight)") +
+  theme_bw()
+
+```
+
+## 2.3 Summary Measure Analysis- box plots
+### found out the outliers
+-1 by the box plot, i could see there were two outliers in group2 and 3, respectively.
+
+-2 It's seems a bit diffecult to remove the outliers by each group, so i just removed the bigest outlier occured in Group 2
+
+```{r message=FALSE, warning=FALSE}
+# Create a summary data by GROUP and ID
+ratss.gb2 <- ratsl %>%
+  group_by(Group, ID) %>%
+  summarise(mean=mean(weight)) %>%
+  ungroup()
+dim(ratss.gb2) #16*3
+# Glimpse the data
+glimpse(ratss.gb2)
+
+# Draw a boxplot of the mean versus group
+ggplot(ratss.gb2, aes(x = Group, y = mean)) +
+  geom_boxplot() +
+  stat_summary(fun = "mean", geom = "point", shape=23, size=4, fill = "white") +
+  scale_y_continuous(name = "mean(weight)") +
+  theme_bw()
+
+# Remove the outliers
+ratss.gb3 <- ratss.gb2 %>%
+  filter(mean < 550)
+dim(ratss.gb3) #15*3
+dim(ratss.gb2) #16*3
+
+# Draw the new boxplot of the mean versus group
+ggplot(ratss.gb3, aes(x = Group, y = mean)) +
+  geom_boxplot() +
+  stat_summary(fun = "mean", geom = "point", shape=23, size=4, fill = "white") +
+  scale_y_continuous(name = "mean(weight)") +
+  theme_bw()
+
+```
+
+## 2.4 Summary Measure Analysis- fit the model and implied the t-test
+-1 the linear model,fit1,  reported that the group variable is significant
+-2 the fit2 revealed that time and group both significantly impact weight
+```{r message=FALSE, warning=FALSE}
+# Fit the linear model with the mean as the response 
+fit1 <- lm(mean ~ Group, data = ratss.gb3)
+
+# Compute the analysis of variance table for the fitted model with anova()
+anova(fit1)
+
+# Fit the linear model with the mean as the response
+names(ratss.gb)
+# "Group" "Time"  "ID"    "mean"  "se"  
+
+fit2 <- lm(mean ~ Group + Time, data = ratss.gb)
+
+# Compute the analysis of variance table for the fitted model with anova()
+anova(fit2)
+```
+
+
+## 3 Linear Mixed Effects Models for bprsl data, the Chapter9 analysis
+-1 bprs ~ treatment + subject + week, the potential formulation
+
+-2 the week would be the random effect
+```{r message=FALSE, warning=FALSE}
+library(dplyr)
+library(tidyr)
+library(ggplot2)
+
+# Load bprs and bprsl
+bprs <- read.csv("https://raw.githubusercontent.com/KimmoVehkalahti/MABS/master/Examples/data/BPRS.txt", sep="", header=TRUE)
+bprsl <- read.csv('data/bprsl.csv', sep = ",", header = TRUE, stringsAsFactors = TRUE) 
+bprsl <- bprsl[,-1]
+
+# the dimension of two form of data
+dim(bprs) #40*11
+dim(bprsl) #360*6
+
+names(bprsl)
+str(bprsl)
+
+# Convert the categorical variables
+bprsl$treatment <- as.factor(bprsl$treatment)
+bprsl$subject <- as.factor(bprsl$subject)
+
+# Draw the plot of new long data form
+ggplot(bprsl, aes(x = week, y = bprs, linetype = subject)) +
+  geom_line(aes(group = subject)) +
+  scale_linetype_manual(values = rep(1:10, times=4)) +
+  facet_grid(. ~ treatment, labeller = label_both) +
+  scale_y_continuous(limits = c(min(bprsl$bprs), max(bprsl$bprs))) +
+  theme_bw()
+
+```
+
+## 3.2 Exploring bprsl
+-1 grouped bprs by subjects, and saw how each treatment varied with week/time
+
+-2 from this line plot, i could clearly find that the impact of teatment and week on bprs, while these two varibles further affecte by subject that acts as random effect or a indepedent varible.
+```{r}
+
+# Number of subject
+n <- bprsl$subject %>% unique() %>% length()
+
+# Summary data with mean and standard error of bprs by treatment and week 
+bprss <- bprsl %>%
+  group_by(treatment, week) %>%
+  summarise( mean = mean(bprs), se = sd(bprs)/sqrt(n) ) %>%
+  ungroup()
+
+# Plot the mean profiles of subjects
+ggplot(bprss, aes(x = week, y = mean, linetype = treatment, shape = treatment)) +
+  geom_line(aes(group = treatment)) +
+  scale_linetype_manual(values = c(1,2)) +
+  geom_point(size=3) +
+  scale_shape_manual(values = c(1,2)) +
+  geom_errorbar(aes(ymin = mean - se, ymax = mean + se, linetype="1"), width=0.3) +
+  scale_y_continuous(name = "mean(bprs) +/- se(bprs)") +
+  theme_bw()
+
+```
+
+
+## 3.3 fit and compare models
+-1 the independent variable (or random effect) was 'subject', and it influenced by week
+
+-2 built two linear mixed model: fit1 and fit2
+
+```{r}
+# access library lme4
+library(lme4)
+
+# Create a random intercept model
+bprsl_ref <- lmer(bprs ~ week + treatment  + (1 | subject), data = bprsl, REML = FALSE)
+
+# Print the summary of the model
+summary(bprsl_ref)
+
+# create a random intercept and random slope model
+bprsl_ref1 <- lmer(bprs ~ week + treatment + (week | subject), data = bprsl, REML = FALSE)
+
+# print a summary of the model
+summary(bprsl_ref1)
+
+# perform an ANOVA test on the two models
+anova(bprsl_ref1, bprsl_ref)
+
+
+```
+
+## 3.4 plot the fitted model
+-1 based on the t-test, anova, the (week|subject) model was be accepted
+
+-2 calculated the fitted values and draw the predicted plot
+```{r fig.height=6, fig.width=12, message=FALSE, warning=FALSE, paged.print=FALSE}
+# Create a vector of the fitted values
+Fitted <- fitted(bprsl_ref1)
+
+# Create a new column fitted to RATSL
+bprsl <- bprsl %>%
+  mutate(Fitted)
+
+ggplot(bprsl, aes(x = week, y = Fitted, linetype = subject)) +
+  geom_line(aes(group = subject)) +
+  scale_linetype_manual(values = rep(1:10, times=2)) +
+  facet_grid(. ~ treatment, labeller = label_both) +
+  theme_bw()
+
+```
+
